2016-01-29 0.12.7
- Fixes:
  - Fix crash caused by race when reading inconsistent values for _NET_CURRENT_DESKTOP and _NET_NUMBER_OF_DESKTOPS
  - Fix regression (all desktop tasks not working)
  - Fix small memory leak in launcher

2016-01-25 0.12.6
- Fixes:
  - Fix crash on 32-bit systems (issue #546)
  - Fix compilation on Slackware (issue #547)
  - Terminal color reset code moved to the same line to prevent interference with logging (issue #545)
- Enhancements:
  - Executor now sends click coordinates via environment variables (issue #544)

2016-01-24 0.12.5
- Fixes:
  - Fix rendering corruption triggered occasionally when the compositor is disabled (regression in 0.12.4)

2016-01-23 0.12.4
- Enhancements:
  - Support for NETWM viewports (as used by Compiz or Unity) (issue #94)
  - The default desktop font (Gtk/FontName from XSettings) is used when a font is not specified in the config file
  - When no fonts are specified in the config, tint2 picks up the default font of the desktop environment via XSettings
  - Tint2 is now able to dump a stack trace to stderr and ~/.tint2-crash.log in case of a crash.
    If the cmake flag ENABLE_BACKTRACE is set, stack traces are dumped on X11 I/O errors.
    If the cmake flag ENABLE_BACKTRACE_ON_SIGNAL is set, stack traces are dumped also on signals such as SIGSEGV.
    Both ENABLE_BACKTRACE and ENABLE_BACKTRACE_ON_SIGNAL are disabled by default.
  - Pixmaps are cached instead of always redrawn between different button states when mouse effects are enabled,
    to improve performance
  - Tooltips are no longer very wide
  - Default config looks nicer
- New config options:
  - Executor: new plugin that displays the output of a command in the panel (issue #161)
  - New taskbar sort order options: least-recently-used (lru), most-recently-used (mru) (issue #532)
  - Place the primary monitor before all the other monitors (primary_monitor_first, issue #538)
  - taskbar_always_show_all_desktop_tasks (issue #279)